--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -48,8 +48,6 @@
         <i class="bi bi-phone d-flex align-items-center"><span>+1 5589 55488 55</span></i>
         <i class="bi bi-clock d-flex align-items-center ms-4"><span> Mon-Sat: 11AM - 23PM</span></i>
       </div>
-
-
     </div>
   </div>
 
@@ -854,7 +852,7 @@
 
       <div data-aos="fade-up">
         <iframe style="border:0; width: 100%; height: 350px;"
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2412.3602474670342!2d-6.155704924294694!3d52.797843315623155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4867c33e7765b26d%3A0xb54f7f8ec541053c!2sThe%20Old%20House!5e0!3m2!1sen!2sie!4v1726157775265!5m2!1sen!2sie"
           frameborder="0" allowfullscreen></iframe>
       </div>
 
