sketch to about and why us sections

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -129,24 +129,24 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>A little bit about us.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+              The Old House is a new modern bar and restaurant recently opened in the heart of Arklow, we serve Lunch,
+              Dinner, Brunch & Drinks.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> Parking Available, Free off-street parking, Television, Highchairs
+                Available, Wheelchair Accessible.</li>
+              <li><i class="bi bi-check-circle"></i> We Serve Alcohol, Full Bar, Wine and Beer.</li>
+              <li><i class="bi bi-check-circle"></i> Have no cash? - No Worry, We Will Gladly Accept Your Credit Card
+                Payments.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              We offer a wide range of cuisine from Irish to oriental while also offering a vast variety of beverages.
+              Our classic
+              style restaurant upstairs offers two and three course meals form 6pm till 9.30pm tues-fri. Our downstairs
+              bar serves bar
+              food daily from 10.30am till 9.30pm.Live music every Saturday from 10.30pm.
             </p>
           </div>
         </div>
@@ -168,25 +168,27 @@
           <div class="col-lg-4">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
-              <h4>Lorem Ipsum</h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4>Friendly Atmosfere</h4>
+              <p> In our restaurant you will feel wellcome and at home. See it to believe it, and check what others have
+                to say about us, you will not be sorry!</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
-              <h4>Repellat Nihil</h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para
-                dest</p>
+              <h4>Superb Location</h4>
+              <p>Located in the heart of Arklow, right on the main street! A perfect location to meet with your friends
+                or to have a break and relax after a long day.</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4> Competitive Prices</h4>
+              <p>Thanks to outstanding management and cost control, we are able to serve your favourite meals and drinks
+                at lower than average price!</p>
             </div>
           </div>
 
