branch menu + soup of the day

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -220,12 +220,12 @@
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/soup-of-the-day.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>$5.95</span>
+              <a href="#">Home Made Soup Of The Day</a><span>€6.50</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              See notice board or ask server for details
             </div>
           </div>
 
