crispy king prawns in menu

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -225,7 +225,17 @@
               <a href="#">Home Made Soup Of The Day</a><span>€6.50</span>
             </div>
             <div class="menu-ingredients">
-              See notice board or ask server for details
+              See notice board or ask server for details (contains: V,C,6,7,9)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/menu/filo-king-prawn.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Crispy King Prawn Roll</a><span>€11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Tiger Prawns in Filo Pastry served with salad garnish and sweet chilli dips. (contains: 1,2,6,11)
             </div>
           </div>
 
