spicy chicken wings

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -239,6 +239,26 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/menu/spicy-chicken-wings.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Crispy Spicy Chicken Wings/a><span>€11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              (contains: 4,7,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/menu/filo-king-prawn.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Crispy King Prawn Roll</a><span>€11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Tiger Prawns in Filo Pastry served with salad garnish and sweet chilli dips. (contains: 1,2,6,11)
+            </div>
+          </div>
+
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
             <div class="menu-content">
