--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -211,7 +211,7 @@
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-starters">Starters</li>
-              <li data-filter=".filter-salads">Salads</li>
+              <li data-filter=".filter-main">Main Course</li>
               <li data-filter=".filter-specialty">Specialty</li>
             </ul>
           </div>
@@ -242,7 +242,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/spicy-chicken-wings.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crispy Spicy Chicken Wings/a><span>€11.95</span>
+              <a href="#">Crispy Spicy Chicken Wings</a><span>€11.95</span>
             </div>
             <div class="menu-ingredients">
               (contains: 4,7,11)
@@ -250,12 +250,12 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/filo-king-prawn.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/caesar-salad.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crispy King Prawn Roll</a><span>€11.95</span>
+              <a href="#">Old House Caesar Salad</a><span>€11.95</span>
             </div>
             <div class="menu-ingredients">
-              Tiger Prawns in Filo Pastry served with salad garnish and sweet chilli dips. (contains: 1,2,6,11)
+              (contains: 1,3,8,10,13)
             </div>
           </div>
 
