main course filter + lasagna menu

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -259,13 +259,15 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="assets/img/menu/lasagna.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Bread Barrel</a><span>$6.95</span>
+              <a href="#">Home Made Beef Lasagna</a><span>€15.95
+              </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Prime minced beef and layers of lasagna pasta in a Bolognese sauce served with garlic bread and chips
+              (contains: 1,4,7,9,12)
             </div>
           </div>
 
