--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -271,6 +271,18 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="assets/img/menu/bbq-ribs.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Full BBQ Baby Back Ribs</a><span>€18.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              BBQ pork ribs served with fresh salad garnich and chips
+              (contains: C, 12)
+            </div>
+          </div>
+
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
             <div class="menu-content">
