sirloin steak + fish and chips menu

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -278,28 +278,33 @@
               </span>
             </div>
             <div class="menu-ingredients">
-              BBQ pork ribs served with fresh salad garnich and chips
+              BBQ pork ribs served with lettuce salad garnich and chips
               (contains: C, 12)
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="assets/img/menu/8oz-sirloinsteak.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>$7.95</span>
+              <a href="#">8oz Sirloin Steak</a><span>€24.95
+              </span>
             </div>
             <div class="menu-ingredients">
-              A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+              8oz Sirloin Steak served with sauteed onion mushroom and pepper sauce and fresh chips
+              (contains: 1,4,6,7,12)
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="assets/img/menu/cod-and-chips.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Caesar Selections</a><span>$8.95</span>
+              <a href="#">Fresh Batter Cod and Chips</a><span>€17.95
+              </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Traditional fillet of Atlantic Cod fried golden brown in a Harp Lager Beer Batter, fresh chips, malt
+              vibegar and tartare compote
+              (contains: 1,4,6,10)
             </div>
           </div>
 
