thai chicken and prawn noodles menu

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -212,8 +212,8 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-starters">Starters</li>
               <li data-filter=".filter-main">Main Course</li>
-              <li data-filter=".filter-specialty">Specialty</li>
               <li data-filter=".filter-oriental">Oriental Dishes</li>
+              <li data-filter=".filter-specialty">Specialty</li>
             </ul>
           </div>
         </div>
@@ -309,23 +309,27 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="assets/img/menu/chicken-curry.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Tuscan Grilled</a><span>$9.95</span>
+              <a href="#">Chicken Curry</a><span>€15.95
+              </span>
             </div>
             <div class="menu-ingredients">
-              Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+              Traditional chicken curry dish, served with rice or chips
+              (contains: 1,6)
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="assets/img/menu/prawn-noodles.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span>$4.95</span>
+              <a href="#">Stir Fried Prawn Noodles</a><span>€18.95
+              </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Traditional prawn noodles, served with rice or chips
+              (contains: 1,4,6,9,11)
             </div>
           </div>
 
