thai chicken img

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -333,13 +333,15 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="assets/img/menu/thai-crispy-chicken.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Greek Salad</a><span>$9.95</span>
+              <a href="#">Thai Sweet Chilli Crispy Shredded Chicken</a><span>€15.95
+              </span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
+              Traditional sweet chilli chicken, served with rice or chips
+              (contains: C,4,6,11)
             </div>
           </div>
 
