roast duck menu

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -345,13 +345,15 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
+          <div class="col-lg-6 menu-item filter-oriental">
+            <img src="assets/img/menu/roasted-duck.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Spinach Salad</a><span>$9.95</span>
+              <a href="#">Crispy Roast Duck</a><span>€19.95
+              </span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+              Choose between Thai Sweet Chilli Sause, Curry or Sweet Sour Sauce
+              (contains: 1,4,6,9,11)
             </div>
           </div>
 
