fillet steak menu

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -358,12 +358,12 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/fillet-steak.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Roll</a><span>$12.95</span>
+              <a href="#">Fillet Steak</a><span>$30.95</span>
             </div>
             <div class="menu-ingredients">
-              Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+              Served with sauteed onions and mushrooms, chips and pepper sauce (contains: 1,6)
             </div>
           </div>
 
