lemon grilled cod menu

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -367,6 +367,16 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/menu/lemon-grilled-cod.jpg" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Grilled Cod with Lemony Prawn</a><span>$30.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Served with mash and veg or chips (contains: 3,6,7,10)
+            </div>
+          </div>
+
         </div>
 
       </div>
