--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -84,16 +84,16 @@
       <div class="row">
         <div class="col-lg-8">
           <h1>Welcome to <span>Old House</span></h1>
-          <h2>Delivering great food for more than 18 years!</h2>
+          <h2>Delivering great food and friendly atmosfere!</h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
-            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a>
+            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Order Take Away</a>
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in"
           data-aos-delay="200">
-          <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="glightbox play-btn"></a>
+          <a href="https://www.youtube.com/watch?v=74JNrS1UFS8" class="glightbox play-btn"></a>
         </div>
 
       </div>
