--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -400,7 +400,7 @@
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Some Special and Exclusive Dish</h3>
+                    <h3>Some Special and Exclusive Dish #1</h3>
                     <p class="fst-italic">Some short description of the dish, and what is so special about it...</p>
                     <p>In this section we can add the list of ingridients, preparation method (without revealing the
                       secret recipe), and try to sell it from the description itself, making it as appealing as
@@ -414,12 +414,11 @@
               <div class="tab-pane" id="tab-2">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Et blanditiis nemo veritatis excepturi</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer
-                      a videna mareta paulona marka</p>
-                    <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt
-                      est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque
-                      beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
+                    <h3>Some Special and Exclusive Dish #2</h3>
+                    <p class="fst-italic">Some short description of the dish, and what is so special about it...</p>
+                    <p>In this section we can add the list of ingridients, preparation method (without revealing the
+                      secret recipe), and try to sell it from the description itself, making it as appealing as
+                      possible.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-2.png" alt="" class="img-fluid">
@@ -429,12 +428,11 @@
               <div class="tab-pane" id="tab-3">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Impedit facilis occaecati odio neque aperiam sit</h3>
-                    <p class="fst-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus
-                      non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
-                    <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque
-                      necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum
-                      odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
+                    <h3>Some Special and Exclusive Dish #3</h3>
+                    <p class="fst-italic">Some short description of the dish, and what is so special about it...</p>
+                    <p>In this section we can add the list of ingridients, preparation method (without revealing the
+                      secret recipe), and try to sell it from the description itself, making it as appealing as
+                      possible.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-3.png" alt="" class="img-fluid">
@@ -444,12 +442,11 @@
               <div class="tab-pane" id="tab-4">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Fuga dolores inventore laboriosam ut est accusamus laboriosam dolore</h3>
-                    <p class="fst-italic">Totam aperiam accusamus. Repellat consequuntur iure voluptas iure porro quis
-                      delectus</p>
-                    <p>Eaque consequuntur consequuntur libero expedita in voluptas. Nostrum ipsam necessitatibus aliquam
-                      fugiat debitis quis velit. Eum ex maxime error in consequatur corporis atque. Eligendi asperiores
-                      sed qui veritatis aperiam quia a laborum inventore</p>
+                    <h3>Some Special and Exclusive Dish #4</h3>
+                    <p class="fst-italic">Some short description of the dish, and what is so special about it...</p>
+                    <p>In this section we can add the list of ingridients, preparation method (without revealing the
+                      secret recipe), and try to sell it from the description itself, making it as appealing as
+                      possible.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-4.png" alt="" class="img-fluid">
@@ -459,11 +456,11 @@
               <div class="tab-pane" id="tab-5">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Est eveniet ipsam sindera pad rone matrelat sando reda</h3>
-                    <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                    <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut
-                      quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae
-                      molestiae voluptate vel</p>
+                    <h3>Some Special and Exclusive Dish #5</h3>
+                    <p class="fst-italic">Some short description of the dish, and what is so special about it...</p>
+                    <p>In this section we can add the list of ingridients, preparation method (without revealing the
+                      secret recipe), and try to sell it from the description itself, making it as appealing as
+                      possible.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-5.png" alt="" class="img-fluid">
