private parties description

--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -527,22 +527,20 @@
                     <p><span>From €299</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua.
+                    Your Dream Party is only a phone call away!
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <li><i class="bi bi-check-circled"></i> Special menu creation.
                     </li>
-                    <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.
+                    <li><i class="bi bi-check-circled"></i> Private invitation cards and table assignment.
                     </li>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <li><i class="bi bi-check-circled"></i> In-house entertainment and live music on demand.
                     </li>
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
+                    Few things leave a deeper mark than an intimate gathering, where your milestone becomes a lasting
+                    memory etched in the
+                    hearts of those who matter most.
                   </p>
                 </div>
               </div>
