--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -497,8 +497,8 @@
                     <p><span>from €99</span></p>
                   </div>
                   <p class="fst-italic">
-                    You can organize a birthday party for your child in our restaurant, and we will take care of the
-                    rest!
+                    Host your child's birthday at our restaurant, and let us handle all the details while you enjoy the
+                    fun!
                   </p>
                   <ul>
                     <li><i class="bi bi-check-circled"></i> Custom menu creation.
@@ -509,8 +509,9 @@
                     </li>
                   </ul>
                   <p>
-                    Please, don't hesitate to contact us for additional details, we will be more than happy to provide
-                    you more informaion. We are eager to organize an unforgettable birthday party for your child!
+                    Feel free to reach out for more details— we’re excited to help you craft an unforgettable birthday
+                    celebration for your
+                    child and happy to provide all the info you need!
                   </p>
                 </div>
               </div>
@@ -554,25 +555,23 @@
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Custom Parties</h3>
                   <div class="price">
-                    <p><span>$99</span></p>
+                    <p><span> From €199</span></p>
                   </div>
                   <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore
-                    magna aliqua.
+                    Custom Parties for special events like Christmass, Easter, New Year or any other celebration you can
+                    think of.
                   </p>
                   <ul>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <li><i class="bi bi-check-circled"></i> Special menu on demand.
                     </li>
-                    <li><i class="bi bi-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.
+                    <li><i class="bi bi-check-circled"></i> Custom table decoration.
                     </li>
-                    <li><i class="bi bi-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <li><i class="bi bi-check-circled"></i> Private room or section of the restaurant.
                     </li>
                   </ul>
                   <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
+                    You hold the reins to shape any celebration as you wish, turning shared moments into memories that
+                    refuse to fade.
                   </p>
                 </div>
               </div>
