--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -851,28 +851,28 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>23 Main St, Arklow, Co. Wicklow, Y14 FH30</p>
               </div>
 
               <div class="open-hours">
                 <i class="bi bi-clock"></i>
                 <h4>Open Hours:</h4>
                 <p>
-                  Monday-Saturday:<br>
-                  11:00 AM - 2300 PM
+                  Monday-Sunday:<br>
+                  12:30 AM - 23:00 PM
                 </p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>info@theoldhouse.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>(0402) 32250</p>
               </div>
 
             </div>
@@ -921,12 +921,12 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Restaurantly</h3>
+              <h3>The Old House</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                23 Main St, Arklow <br>
+                Co. Wicklow, Y14 FH30<br><br>
+                <strong>Phone:</strong> (0402) 32250<br>
+                <strong>Email:</strong> info@theoldhouse.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -952,11 +952,16 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Web
+                  Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Web Design</a>
+              </li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Product
+                  Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Marketing</a>
+              </li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Graphic
+                  Design</a></li>
             </ul>
           </div>
 
