--- a/Restaurantly/index.html
+++ b/Restaurantly/index.html
@@ -515,7 +515,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="row event-item">
@@ -545,7 +545,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="row event-item">
@@ -575,7 +575,7 @@
                   </p>
                 </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
@@ -600,13 +600,16 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-                  quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Delicious food. Fantastic service. Staff went above and beyond to cater for our party and family
+                  members with food
+                  allergies. Large portions at a very reasonable price - the steak was delicious and cooked to
+                  perfection. Would highly
+                  recommend.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <img src="assets/img/testimonials/testimonial_1.jpg" class="testimonial-img" alt="">
+                <h3>Emer McKeever</h3>
+                <h4>Visitor</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -952,22 +955,27 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Web
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/"
+                  target="_blank">Web
                   Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Web Design</a>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/"
+                  target="_blank">Web Design</a>
               </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Product
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/"
+                  target="_blank">Product
                   Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Marketing</a>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/"
+                  target="_blank">Marketing</a>
               </li>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/">Graphic
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/in/paul-dzvonyk/"
+                  target="_blank">Graphic
                   Design</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Subscribe to our newsletter and be the first one to know about upcomming events!</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -980,7 +988,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Restaurantly</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Paul Dzvonyk</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
